Update GlobalRuntimeImpl.java
newInstance() in java.lang.Class has been deprecated